--- a/package.json
+++ b/package.json
@@ -1,26 +1,13 @@
 {
-  "name": "my-vue-app",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
+  "name": "renovate_tutorial",
+  "version": "0.0.1",
+  "description": "A simple package json for Renovate tutorial use only",
+  "author": "Philip",
+  "license": "Apache-2.0",
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.64",
-    "@types/react-dom": "^18.2.21",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.1.6"
+    "commander": "2.20.3",
+    "lodash": "4.17.20",
+    "@date-io/date-fns": "2.10.0",
+    "@date-io/moment": "2.10.0"
   }
 }
